# appframe-starter

./: .gitignore  CMakeLists.txt  README.md  afdef.h  common.h  main.cpp
common/: Properties.cpp  Properties.h  common.h  md5.cpp  md5.h
